--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,9 +1,5 @@
 <div class="container" style="margin-top:100px;" align="center">
 
-  <div class="pull-right">
-    Already a member ?
-  </div>
-  <a [routerLink]="['/login']" class="btn btn-info" style="margin-left:0px">Sign In</a>
   <div>
   </div>
 </div>
@@ -94,37 +90,41 @@
 
   <p class="h4 mb-4">Sign up</p>
 
-  <div class="form-row mb-4">
-    <div class="col">
-      <!-- First name -->
-      <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+  <div class="col-md-12">
+    <div class="form-group" align="center">
+      <label><b>Email</b></label>
+      <input id="email" type="text" class="form-control" name="email" placeholder="Email address" /><!--[(ngModel)]="email.value"-->
+
+
+
     </div>
-    <div class="col">
-      <!-- Last name -->
-      <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+  </div>
+  <div class="col-md-12">
+    <div class="form-group" align="center">
+      <label><b>Password</b></label>
+      <input id="password" type="password" class="form-control" name="password" placeholder="Password"/> <!--[(ngModel)]="password.value"-->
+
     </div>
   </div>
 
-  <!-- E-mail -->
-  <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+  <div class="col-md-12">
+    <div class="form-group" align="center">
+      <label><b>Firstname</b></label>
+      <input id="first_name" type="text" class="form-control" name="first_name" placeholder="firstname" /><!--[(ngModel)]="email.value"-->
 
-  <!-- Password -->
-  <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
-  <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-  </small>
 
-  <!-- Confirm Password -->
-  <input type="password" id="defaultRegisterFormConfirmPassword" class="form-control" placeholder="Confirm Password" aria-describedby="defaultRegisterFormConfirmPasswordHelpBlock">
-  <small id="defaultRegisterFormConfirmPasswordHelpBlock" class="form-text text-muted mb-4">
-  </small>
 
-  <!-- Phone number -->
-  <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
-  <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="form-group" align="center">
+      <label><b>Lastname</b></label>
+      <input id="last_name" type="text" class="form-control" name="last_name" placeholder="lastname"/> <!--[(ngModel)]="password.value"-->
 
-  </small>
+    </div>
+  </div>
 
-  <select class="browser-default custom-select">
+  <select class="browser-default custom-select" (change)="typeSelected()">
     <option selected>Select Role</option>
     <option value="1">Content Creator</option>
     <option value="2">User</option>
@@ -132,10 +132,42 @@
   <small id="space" class="form-text text-muted mb-4">
 
   </small>
+  <!-- Beginning of tempory makeContentCreator-->
+  <div id="wrap" class="wrap" *ngIf="visability">
+  <div class="col-md-12">
+    <div class="form-group" align="center">
+      <label><b>Company</b></label>
+      <input id="company" type="text" class="form-control" name="company" placeholder="company" /><!--[(ngModel)]="email.value"-->
+
+
+
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="form-group" align="center">
+      <label><b>Profession</b></label>
+      <input id="profession" type="text" class="form-control" name="profession" placeholder="profession"/> <!--[(ngModel)]="password.value"-->
+
+  </div>
+  </div>
+
+  </div>
+  <!-- end of temp create contentcreator-->
+  <div *ngIf="visability;else elseBlock">
+    <div class="col-sm-12">
+      <a class="btn btn-info " target="__blank" (click)="registerCreator()">Register creator</a>
+    </div>
+
+</div>
+
+<ng-template #elseBlock>
+  <div class="col-sm-12">
+    <a class="btn btn-info " target="__blank" (click)="register()">Register</a>
+  </div>
+
+</ng-template>
 
   <!-- Sign up button -->
-  <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign up</button>
-
 
   <hr>
 
