--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -1,18 +1,33 @@
-<h1 class="pageHeader" >Market place</h1>
+<mat-carousel
+  timings="250ms ease-in"
+  [autoplay]="true"
+  interval="5000"
+  color="accent"
+  maxWidth="auto"
+  proportion="25"
+  slides="5"
+  [loop]="true"
+  [hideArrows]="false"
+  [hideIndicators]="false"
+  [useKeyboard]="true"
+  [useMouseWheel]="false"
+  orientation="ltr"
+>
+  <mat-carousel-slide
+    #matCarouselSlide
+    *ngFor="let slide of slides; let i = index"
+    [image]="slide.image"
+    overlayColor="#00000040"
+    [hideOverlay]="true"
+  ></mat-carousel-slide>
+</mat-carousel>
 
-<div class="container" align="center">
-  <div class="news">
-    <div class="text">
-      <p>News</p>
-    </div>
-  </div>
-</div>
 <div>
 
   <div class="containerpp" allign="center">
 
     <div class="textpp">
-      <p class="header">Those are the most popular packages on the platform</p>
+      <p class="header">Most popular packages on the platform</p>
     </div>
 
     <div class="cardDiv">
@@ -53,7 +68,7 @@
           <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
         </div>
         <div class="card-body">
-          <p class="tag tag-red">Technology</p>
+          <p class="tag tag-red">Module</p>
           <p>
             An exploration into the truck's polarising design
             An exploration into the truck's polarising design
@@ -80,12 +95,25 @@
       <h1>All packages</h1>
     </div>
 
+    <mat-form-field appearance="fill">
+      <mat-label>Categories</mat-label>
+      <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
+        <mat-select-trigger>
+          {{categories.value ? categories.value[0] : ''}}
+          <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
+             (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
+           </span>
+        </mat-select-trigger>
+        <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
+      </mat-select>
+    </mat-form-field>&nbsp;&nbsp;&nbsp;
 
-    <!--button (click)="sortClick()">Sort</button-->
-    <!--button className="bn632-hover bn28" (click)="sortClick()">Sort</button-->
+
     <button class="button-78" role="button" (click)="sortClick()">Sort (A to Z)</button>
   </div>
-  <div class="containerPP">
+
+
+  <section class="containerPP">
 
     <div class="containerpp">
       <ul *ngIf="packages">
@@ -109,29 +137,7 @@
       </ul>
     </div>
 
-  </div>
-
-
-  <mat-form-field appearance="fill">
-       <mat-label>Categories</mat-label>
-       <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
-         <mat-select-trigger>
-           {{categories.value ? categories.value[0] : ''}}
-           <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
-             (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
-           </span>
-         </mat-select-trigger>
-         <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
-       </mat-select>
-  </mat-form-field>&nbsp;&nbsp;&nbsp;
-
-
-
-
-
-
-
-
+  </section>
 
 
 </div>
