--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -6,7 +6,7 @@
               <div class="card">
                 <div class="card-body">
                   <div class=" align-items-center text-center">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="Admin" class="rounded-circle" width="150">
+                    <img src="https://www.shareicon.net/data/512x512/2016/09/15/829466_man_512x512.png" alt="Admin" class="rounded-circle" width="150">
                     <div class="mt-3">
                       <h4> {{currentUser.first_name}} {{currentUser.last_name}}</h4>
                       <p class="text-secondary mb-1" *ngIf="isCreator">Content Creator</p>
@@ -27,9 +27,8 @@
                 <div class="eventInfo">
                   <h1>Packages </h1>
                     <p>
-                    Why do we use it?It is a long established fact that a reader will be distracted by
+                    Why do we use it ? It is a long established fact that a reader will be distracted by
                     the readable content of a page when looking at its layout. The point of using Lorem
-
                     </p>
                 </div>
               </div>
@@ -65,9 +64,9 @@
                         </li>
                       </ul>
                     </div>
-                
+
                   </div>
-            
+
 
 
                 </div>
